@@ -5,8 +5,8 @@ import com.kakao.s2graph.core._
 import com.kakao.s2graph.core.mysqls._
 import com.kakao.s2graph.core.parsers.WhereParser
 import com.kakao.s2graph.core.types._
+import com.kakao.s2graph.core.utils.logger
 import com.typesafe.config.Config
-
 import play.api.libs.json._
 
 import scala.util.{Failure, Success, Try}
@@ -112,7 +112,48 @@ class RequestParser(config: Config) extends JSONParser {
     }
     vertices.toSeq
   }
+  def toQueryOption(jsValue: JsValue): QueryOption = {
+    val filterOutFields = (jsValue \ "filterOutFields").asOpt[List[String]].getOrElse(List(LabelMeta.to.name))
+    val filterOutQuery = (jsValue \ "filterOut").asOpt[JsValue].map { v => toQuery(v) }.map { q =>
+      q.copy(queryOption = q.queryOption.copy(filterOutFields = filterOutFields))
+    }
+    val removeCycle = (jsValue \ "removeCycle").asOpt[Boolean].getOrElse(true)
+    val selectColumns = (jsValue \ "select").asOpt[List[String]].getOrElse(List.empty)
+    val groupByColumns = (jsValue \ "groupBy").asOpt[List[String]].getOrElse(List.empty)
+    val orderByColumns: List[(String, Boolean)] = (jsValue \ "orderBy").asOpt[List[JsObject]].map { jsLs =>
+      for {
+        js <- jsLs
+        (column, orderJs) <- js.fields
+      } yield {
+        val ascending = orderJs.as[String].toUpperCase match {
+          case "ASC" => true
+          case "DESC" => false
+        }
+        column -> ascending
+      }
+    }.getOrElse(List("score" -> false, "timestamp" -> false))
+    val withScore = (jsValue \ "withScore").asOpt[Boolean].getOrElse(true)
+    val returnTree = (jsValue \ "returnTree").asOpt[Boolean].getOrElse(false)
+    //TODO: Refactor this
+    val limitOpt = (jsValue \ "limit").asOpt[Int]
+    val returnAgg = (jsValue \ "returnAgg").asOpt[Boolean].getOrElse(true)
+    val scoreThreshold = (jsValue \ "scoreThreshold").asOpt[Double].getOrElse(Double.MinValue)
+    val returnDegree = (jsValue \ "returnDegree").asOpt[Boolean].getOrElse(true)
 
+    QueryOption(removeCycle = removeCycle,
+      selectColumns = selectColumns,
+      groupByColumns = groupByColumns,
+      orderByColumns = orderByColumns,
+      filterOutQuery = filterOutQuery,
+      filterOutFields = filterOutFields,
+      withScore = withScore,
+      returnTree = returnTree,
+      limitOpt = limitOpt,
+      returnAgg = returnAgg,
+      scoreThreshold = scoreThreshold,
+      returnDegree = returnDegree
+    )
+  }
   def toQuery(jsValue: JsValue, isEdgeQuery: Boolean = true): Query = {
     try {
       val vertices =
@@ -135,34 +176,9 @@ class RequestParser(config: Config) extends JSONParser {
         }).flatten
 
       if (vertices.isEmpty) throw BadQueryException("srcVertices`s id is empty")
-
-      val filterOutFields = (jsValue \ "filterOutFields").asOpt[List[String]].getOrElse(List(LabelMeta.to.name))
-      val filterOutQuery = (jsValue \ "filterOut").asOpt[JsValue].map { v => toQuery(v) }.map { q => q.copy(filterOutFields = filterOutFields) }
       val steps = parse[Vector[JsValue]](jsValue, "steps")
-      val removeCycle = (jsValue \ "removeCycle").asOpt[Boolean].getOrElse(true)
-      val selectColumns = (jsValue \ "select").asOpt[List[String]].getOrElse(List.empty)
-      val groupByColumns = (jsValue \ "groupBy").asOpt[List[String]].getOrElse(List.empty)
-      val orderByColumns: List[(String, Boolean)] = (jsValue \ "orderBy").asOpt[List[JsObject]].map { jsLs =>
-        for {
-          js <- jsLs
-          (column, orderJs) <- js.fields
-        } yield {
-          val ascending = orderJs.as[String].toUpperCase match {
-            case "ASC" => true
-            case "DESC" => false
-          }
-          column -> ascending
-        }
-      }.getOrElse(List("score" -> false, "timestamp" -> false))
-      val withScore = (jsValue \ "withScore").asOpt[Boolean].getOrElse(true)
-      val returnTree = (jsValue \ "returnTree").asOpt[Boolean].getOrElse(false)
 
-      // TODO: throw exception, when label dosn't exist
-      val labelMap = (for {
-        js <- jsValue \\ "label"
-        labelName <- js.asOpt[String]
-        label <- Label.findByName(labelName)
-      } yield (labelName, label)).toMap
+      val queryOption = toQueryOption(jsValue)
 
       val querySteps =
         steps.zipWithIndex.map { case (step, stepIdx) =>
@@ -197,7 +213,7 @@ class RequestParser(config: Config) extends JSONParser {
           val queryParams =
             for {
               labelGroup <- queryParamJsVals
-              queryParam <- parseQueryParam(labelMap, labelGroup)
+              queryParam <- parseQueryParam(labelGroup)
             } yield {
               val (_, columnName) =
                 if (queryParam.labelWithDir.dir == GraphUtil.directions("out")) {
@@ -220,18 +236,7 @@ class RequestParser(config: Config) extends JSONParser {
 
         }
 
-      val ret = Query(
-        vertices,
-        querySteps,
-        removeCycle = removeCycle,
-        selectColumns = selectColumns,
-        groupByColumns = groupByColumns,
-        orderByColumns = orderByColumns,
-        filterOutQuery = filterOutQuery,
-        filterOutFields = filterOutFields,
-        withScore = withScore,
-        returnTree = returnTree
-      )
+      val ret = Query(vertices, querySteps, queryOption)
       //      logger.debug(ret.toString)
       ret
     } catch {
@@ -244,7 +249,7 @@ class RequestParser(config: Config) extends JSONParser {
     }
   }
 
-  private def parseQueryParam(labelMap: Map[String, Label], labelGroup: JsValue): Option[QueryParam] = {
+  private def parseQueryParam(labelGroup: JsValue): Option[QueryParam] = {
     for {
       labelName <- parse[Option[String]](labelGroup, "label")
     } yield {
